--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
 		]
 	},
 	"devDependencies": {
+		"@types/cypress": "^1.1.3",
 		"@types/react-router": "^5.1.18",
 		"@types/styled-components": "^5.1.25",
+		"cypress": "^10.3.0",
 		"gh-pages": "^4.0.0"
 	}
 }
